[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/cardengine/card/abstract_card.tscn" type="PackedScene" id=1]
[ext_resource path="res://cards/normal/normal_card.gd" type="Script" id=2]
[ext_resource path="res://cards/normal/card_back_background.png" type="Texture" id=3]
[ext_resource path="res://cards/normal/card_front_background.png" type="Texture" id=4]
[ext_resource path="res://cards/normal/card_mythic_background.png" type="Texture" id=5]
[ext_resource path="res://cards/normal/card_shadow.png" type="Texture" id=7]
[ext_resource path="res://cards/normal/card_desc_background.png" type="Texture" id=8]
[ext_resource path="res://cards/normal/card_cost_background.png" type="Texture" id=9]
[ext_resource path="res://cards/normal/card_picture_placeholder.png" type="Texture" id=10]
[ext_resource path="res://cards/normal/card_placeholder.png" type="Texture" id=11]
[ext_resource path="res://cards/normal/card_rare_background.png" type="Texture" id=12]
[ext_resource path="res://cards/normal/card_uncommon_background.png" type="Texture" id=13]
[ext_resource path="res://cards/normal/card_common_background.png" type="Texture" id=14]
[ext_resource path="res://fonts/TerminusTTF-4.39.ttf" type="DynamicFontData" id=15]

[sub_resource type="DynamicFont" id=5]
size = 58
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=2]
size = 34
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[node name="NormalCard" instance=ExtResource( 1 )]
script = ExtResource( 2 )
size = Vector2( 420, 600 )

[node name="Button" type="Button" parent="." index="0"]
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
icon_align = 1

[node name="Shadow" type="Sprite" parent="AnimContainer" index="0"]
position = Vector2( -1.34912, 0.400543 )
texture = ExtResource( 7 )

[node name="Background" type="Sprite" parent="AnimContainer/Placeholder" index="0"]
texture = ExtResource( 11 )

[node name="Front" parent="AnimContainer" index="2"]
visible = true

[node name="Background" type="Sprite" parent="AnimContainer/Front" index="0"]
texture = ExtResource( 4 )

[node name="NameBackground" type="Sprite" parent="AnimContainer/Front" index="1"]
position = Vector2( 0, -150 )
texture = ExtResource( 10 )

[node name="Name" type="Label" parent="AnimContainer/Front/NameBackground" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -40.0
margin_right = -154.0
margin_bottom = -128.0
custom_fonts/font = SubResource( 5 )
text = "Card Name"
align = 1
valign = 1

[node name="DescBackground" type="Sprite" parent="AnimContainer/Front" index="2"]
position = Vector2( 0, 150 )
texture = ExtResource( 8 )

[node name="Desc" type="Label" parent="AnimContainer/Front/DescBackground" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -91.0
margin_right = -167.0
margin_bottom = -117.0
custom_colors/font_color = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_fonts/font = SubResource( 2 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. "
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="CostBackground" type="Sprite" parent="AnimContainer/Front" index="3"]
position = Vector2( -184.699, -281.75 )
texture = ExtResource( 9 )
offset = Vector2( 10, 10 )

[node name="Cost" type="Label" parent="AnimContainer/Front/CostBackground" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -31.0
margin_right = -38.0
margin_bottom = -38.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
clip_text = true

[node name="PictureGroup" type="Node2D" parent="AnimContainer/Front" index="4"]

[node name="Common" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="0"]
texture = ExtResource( 14 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/Common" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -18.0
margin_right = -200.0
margin_bottom = -71.0
custom_fonts/font = SubResource( 1 )
text = "Common"
valign = 1

[node name="Uncommon" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="1"]
visible = false
texture = ExtResource( 13 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/Uncommon" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -18.0
margin_right = -336.0
margin_bottom = -71.0
custom_fonts/font = SubResource( 1 )
text = "Uncommon"
valign = 1
clip_text = true

[node name="Rare" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="2"]
visible = false
texture = ExtResource( 12 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/Rare" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -18.0
margin_right = -336.0
margin_bottom = -71.0
custom_fonts/font = SubResource( 1 )
text = "Rare"
valign = 1

[node name="Mythic" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="3"]
visible = false
texture = ExtResource( 5 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/Mythic" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -18.0
margin_right = -336.0
margin_bottom = -71.0
custom_fonts/font = SubResource( 1 )
text = "Mythic"
valign = 1

[node name="Attack" type="Label" parent="AnimContainer/Front/PictureGroup" index="4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -18.0
margin_right = 140.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Attack"
align = 2
valign = 1

[node name="Skill" type="Label" parent="AnimContainer/Front/PictureGroup" index="5"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -18.0
margin_right = 140.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Skill"
align = 2
valign = 1

[node name="Power" type="Label" parent="AnimContainer/Front/PictureGroup" index="6"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -18.0
margin_right = 140.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Power"
align = 2
valign = 1

[node name="CardId" type="Label" parent="AnimContainer/Front" index="5"]
visible = false
margin_left = 76.0
margin_top = 230.0
margin_right = 141.0
margin_bottom = 244.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = SubResource( 2 )
text = "card_id"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="AnimContainer/Back" index="0"]
texture = ExtResource( 3 )

[node name="MouseArea" parent="AnimContainer" index="4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -300.0
margin_right = 210.0
margin_bottom = 300.0

[connection signal="instance_changed" from="." to="." method="_on_NormalCard_instance_changed"]
[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]
